[tool.poetry]
name = "django-libsql"
version = "0.1.0"
description = ""
authors = ["Douglas Montes <douglas.montes@profusion.mobi>"]
readme = "README.md"
packages = [{include = "django_libsql"}]

[tool.poetry.dependencies]
python = "^3.10"
libsql-client = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
